# esdiag

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE.txt  about.hbs  about.toml  build.rs  cloudbuild.yaml  cloudbuild.yml  esdiag.spdx.json  example.env  fix.py  fix_alerts.patch  fix_data_sources.py  fix_names.sh  fix_streaming.sh  package.json  parse_test  parse_test.rs  readme.md  tauri.conf.json  test.rs  test_semver.rs  test_snapshot_semver.rs
.github/workflows/: container-img.yml  desktop-artifacts.yml  docker-simple.yml  openspec-archived.yml  release-esdiag-local.yml
assets/: readme.md
assets/agent/: sources.yml
assets/elasticsearch/: assets.yml  sources-divergences.yml  sources.yml  syscalls.yml
assets/kibana/: assets.yml  dashboards.ndjson  readme.md  sources.yml  space.json  spaces.yml
assets/logstash/: sources.yml
capabilities/: default.json
crates/elasticrc/: Cargo.toml
crates/elasticrc/src/: lib.rs
crates/elasticrc/tests/: schema_drift.rs
crates/elasticrc/tests/fixtures/: elastic-cli-basic.yml
desktop/: tauri.conf.json
desktop/capabilities/: default.json
desktop/frontend-dist/: index.html
desktop/packaging/: desktop-targets.json
desktop/scripts/: build-flatpak-local.sh  buildx-windows.sh  normalize-cargo-version-for-msi.sh  readme.md  test-normalize-cargo-version-for-msi.sh  validate-desktop-artifacts.sh  verify-desktop-config.sh
docker/: Dockerfile  buildx-windows.Dockerfile  docker-compose-insecure.yml  docker-compose-proxy.yml  docker-compose.yml  pomerium-config.yml
docs/: command-line.md  documentation.md  environment_variables.md  esdiag-control.md  gcloud.md  github_token.md  hosts-keystore.md  index.md  llm-setup-guide.md  scrubbed-diagnostics.md  source-reconciliation.md
docs/adr/: 0001-split-product-into-platform-and-application.md  0002-unify-operations-into-one-six-stage-pipeline.md  0003-name-the-universal-model-job.md  0004-universal-job-model-and-stage-aligned-modules.md  0005-collection-definition-is-the-single-source-of-truth.md  0006-own-sources-yml-reconcile-with-support-diagnostics.md  0007-separate-authentication-from-runtime-mode.md  0008-per-user-isolation-is-structural.md  0009-migrate-saved-jobs-by-rewrite-on-first-read.md  0010-manifests-are-additive-only-and-never-migrated.md  0011-credential-custody-keystore-user-mode-only.md  0012-keystore-unlock-delegates-use-not-disclosure.md  0013-indexed-data-model-is-ecs-inspired-source-aligned.md  0014-evolve-indexed-data-model-via-field-aliases.md  0015-output-data-stream-naming-is-a-verified-contract.md  0016-first-class-diagnostic-outcome-and-event-recording.md  0017-weight-is-two-axes-source-load-and-processing-cost.md  0018-resource-governance-for-the-shared-service.md  0019-acquisition-mode-api-collect-only-es-kibana-logstash.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/api/: README.md  endpoints.md  errors.md  examples.md  types.md
docs/desktop/: packaging.md
docs/example/: subtopic.md
docs/repository/: branch-management.md  organization.md
dummy_output/api-diagnostics-20260228-125224/: alias.json  diagnostic_manifest.json  indices_stats.json  internal_health.json  licenses.json  mapping.json  nodes.json  nodes_stats.json  tasks.json
icons/: icon.icns
openspec/: config.yaml
output_dir/api-diagnostics-20260228-122217/: alias.json  cluster_settings.json  diagnostic_manifest.json
output_dir/api-diagnostics-20260228-122305/: alias.json  diagnostic_manifest.json  internal_health.json  version.json
output_dir/api-diagnostics-20260228-122337/: alias.json  diagnostic_manifest.json  indices_stats.json  internal_health.json  mapping.json  nodes_stats.json  settings.json  tasks.json
packaging/: desktop-targets.json
packaging/flatpak/: com.elastic.esdiag.json
scripts/: README.md  docker-build.sh  reconcile_sources.py
skills/esdiag/: SKILL.md
src/: client.rs  collector.rs  data.rs  embeds.rs  env.rs  exporter.rs  host.rs  input.rs  job.rs  lib.rs  main.rs  output.rs  processor.rs  receiver.rs  server.rs  setup.rs  uploader.rs  uri.rs
src-tauri/capabilities/: default.json
src/client/: elasticsearch.rs  kibana.rs  known_host.rs  logstash.rs  mod.rs
src/data/: application.rs  auth.rs  collector.rs  diagnostic.rs  elasticsearch.rs  keystore.rs  known_host.rs  logstash.rs  mod.rs  platform.rs  product.rs  saved_jobs.rs  settings.rs  uri.rs  workflow.rs
src/exporter/: archive.rs  directory.rs  elastic.rs  elasticsearch.rs  file.rs  mod.rs  stream.rs
src/input/: archive.rs  eck.rs  elasticsearch.rs  file.rs  kibana.rs  logstash.rs  manifest.rs
src/job/: executor.rs  mod.rs  model.rs
src/output/: elasticsearch.rs  file.rs  stdout.rs
src/processor/: api.rs  collector.rs  diagnostic.rs  elastic_cloud_kubernetes.rs  elasticsearch.rs  kubernetes_platform.rs  logstash.rs  lookup.rs  mod.rs
src/receiver/: api_server.rs  archive.rs  directory.rs  elastic_cloud_admin.rs  elastic_uploader.rs  elasticsearch.rs  kibana.rs  logstash.rs  mod.rs  upload_service.rs
src/server/: api.rs  api_key.rs  bundle_download.rs  docs.rs  hosts.rs  (+15 more)
templates/: advanced.html  docs-component.html  docs.html  error.html  hosts.html  index.html  job_completed.html  job_failed.html  job_processing.html  layout.html  settings.html
test_semver/: Cargo.toml
tests/: README.md  agent_cli_tests.rs  agent_process_tests.rs  api.rs  archive_lookup_enriched_processors_tests.rs  collection_tests.rs  elastic_cli_help_tests.rs  elastic_cli_keyring_tests.rs  elastic_diag_wrapper_tests.rs  elasticsearch_asset_templates_tests.rs  esdiag-local-live.sh  esdiag-local.sh  host_cli_tests.rs  keystore_cli_tests.rs  keystore_web_unlock_tests.rs  logstash_archive_processing_tests.rs  logstash_collection_tests.rs  runtime_mode_desktop_settings_tests.rs  runtime_mode_web_tests.rs  scrub_debug_log_tests.rs  scrub_normalization_assertions.rs  scrubbed_normalization_tests.rs  server.rs  server_ui_docs_theme_tests.rs  service_link_parser_tests.rs  service_link_wait_tests.rs  sources_override_tests.rs
(+846 files in other folders)
