[package]
name = "esdiag"
version = "0.9.1"
edition = "2024"
rust-version = "1.88"

[dependencies]
axum = { version = "^0.8.4", features = ["multipart"] }
axum-server = "^0.7.0"
base64 = "^0.22.1"
bytes = "^1.9.0"
chrono = "^0.4"
clap = { version = "^4.5", features = ["derive"] }
elasticsearch = "^8.17.0-alpha.1"
env_logger = { version = "^0.11" }
eyre = "^0.6.12"
futures = "^0.3"
include_dir = "^0.7"
json-patch = "^4.0"
log = "^0.4"
rayon = "^1.10"
regex = "^1.10.5"
reqwest = { version = "^0.12.15", features = ["blocking"] }
semver = { version = "^1.0.23", features = ["serde"] }
serde = { version = "^1.0.199", features = ["derive", "rc"] }
serde_json = "^1.0.116"
serde_with = "3.12.0"
serde_yaml = "^0.9.34"
tokio = { version = "^1.45.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "sync",
    "io-util",
] }
url = { version = "^2.5.0", features = ["serde"] }
uuid = { version = "^1.8.0", features = ["v4", "fast-rng"] }
zip = { version = "^2.1.3", default-features = false, features = [
    "chrono",
    "deflate",
    "deflate64",
    "time",
] }

[dev-dependencies]
reqwest = { version = "^0.12.15", features = ["json", "blocking", "multipart"] }
tokio-test = "0.4.3"
