[package]
name = "esdiag"
version = "0.15.0-SNAPSHOT"
edition = "2024"
rust-version = "1.89"
license = "Elastic-2.0"

[features]
default = ["full"]
full = ["server", "setup", "keystore"]
setup = []
server = []
keystore = []
desktop = ["server", "dep:tauri", "dep:tauri-build", "dep:tauri-plugin-opener"]

[dependencies]
aes-gcm-siv = "0.11.1"
askama = { version = "0.15.4", default-features = false, features = ["derive", "std", "serde_json"] }
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["multipart", "macros"] }
axum-server = "0.8.0"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
datastar = { version = "0.3.1", features = ["axum"] }
elasticsearch = { git = "https://github.com/VimCommando/elasticsearch-rs", rev = "2eff23f3d908c177b8ecc03c4a8af0f8080d7a80" }
eyre = "0.6.12"
futures = "0.3"
indexmap = "2.13.0"
json-patch = "4.1"
mimalloc = "0.1.48"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log"] }
pbkdf2 = "0.12.2"
pulldown-cmark = "0.13.1"
rand = "0.10.0"
rayon = "1.11"
regex = "1.12"
reqwest = { version = "0.12.28", features = ["json", "blocking", "multipart"] }
rpassword = "7.4.0"
rust-embed = { version = "8.9.0", features = ["compression"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["float_roundtrip", "raw_value"] }
serde_with = { version = "3.16.1", default-features = false, features = ["macros"] }
serde_yaml = "0.9"
sha2 = "0.10.9"
tar = { version = "0.4.44", optional = true, default-features = false }
tauri = { version = "2.10.2", optional = true , features = [] }
tauri-plugin-opener = { version = "2", optional = true }
tokio = { version = "1.49", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "sync",
    "io-util",
    "net",
] }
url = { version = "2.5.8", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.20", features = ["v4", "fast-rng"] }
zip = { version = "8.1.0", default-features = false, features = [
    "deflate-flate2",
] }

[dev-dependencies]
portpicker = "0.1.1"
reqwest = { version = "0.12.28", features = ["json", "blocking", "multipart"] }
tokio-test = "0.4.5"
tokio = { version = "1.49", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "sync",
    "io-util",
] }
tempfile = "3.26.0"

[build-dependencies]
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
tar = { version = "0.4.44", default-features = false }
tauri-build = { version = "2.5.5", features = ["codegen"], optional = true }
