[package]
name = "elasticrc"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "Elastic-2.0"

[dependencies]
keyring-core = "1.0.0"
redact = "0.1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = { version = "2.5.8", features = ["serde"] }
yaml_serde = "0.10.4"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[dev-dependencies]
tempfile = "3.27.0"
